--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  microservices-net:
+    driver: bridge
+
 services:
   postgres:
     container_name: ms_pg_sql
@@ -24,10 +28,13 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
+      - ./docker/pgadmin/servers.json:/pgadmin4/servers.json
     ports:
       - "5050:80"
     networks:
       - microservices-net
+    depends_on:
+      - postgres
     restart: unless-stopped
 
   tempo:
@@ -69,9 +76,13 @@ services:
     ports:
       - "3000:3000"
 
-networks:
-  microservices-net:
-    driver: bridge
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbit
+    ports:
+      - "5672:5672"  # Порт для AMQP
+      - "15672:15672"  # Порт для веб-интерфейса управления
+    restart: unless-stopped
 
 volumes:
   postgres:
