--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -1,18 +1,35 @@
 global:
-  scrape_interval: 15s      # Более разумный интервал для продакшена
-  evaluation_interval: 15s  # Проверка алертов раз в 15 секунд
+  scrape_interval: 15s
+  evaluation_interval: 15s
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - alertmanager:9093
+
+rule_files:
+  - /etc/prometheus/rule_files/*.yml
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     static_configs:
-      - targets: ['prometheus:9090']
+      - targets: ["localhost:9090"]
 
-  - job_name: 'service-registry'
-    metrics_path: '/actuator/prometheus'
+  - job_name: "redis-exporter"
     static_configs:
-      - targets: [ 'host.docker.internal:8761' ]
-        labels:
-          app: 'service-registry'
+      - targets: ["redis-exporter:9121"]
+
+  - job_name: "rabbitmq-exporter"
+    static_configs:
+      - targets: [ "rabbitmq-exporter:9419" ]
+
+#  - job_name: 'service-registry'
+#    metrics_path: '/actuator/prometheus'
+#    static_configs:
+#      - targets: [ 'host.docker.internal:8761' ]
+#        labels:
+#          app: 'service-registry'
 
 #  # 3. Пример для других Spring-приложений на localhost
 #  - job_name: 'user-service'
