--- a/services/spring-cloud-config-server/src/main/resources/application.yaml
+++ b/services/spring-cloud-config-server/src/main/resources/application.yaml
@@ -9,3 +9,15 @@ spring:
       server:
         native:
           search-locations: "[classpath:/, classpath:/config, classpath:/config/{application}]"
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://host.docker.internal:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
