--- a/services/spring-cloud-config-server/src/main/resources/config/application.yaml
+++ b/services/spring-cloud-config-server/src/main/resources/config/application.yaml
@@ -6,3 +6,15 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://host.docker.internal:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
